# DEPT-Canvas

./: .env.example  .gitignore  AGENTS.md  ANIMATION.md  BUILD_AGENT.md  BUILD_LOG.md  CESDK.md  CLAUDE.md  COST_AUDIT.md  DEPT_Canvas_Complete_Architecture.docx  EDITOR_FEATURES_ROADMAP.md  GCP.md  IMPLEMENTATION_PLAN.md  LOCKS.md  MAPPING_AGENT.md  MCP_SERVER.md  MOTION_ENGINE.md  README.md  RUN_LOCAL.md  SECURITY.md  UX.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts
.cursor/rules/: dept-canvas-build.mdc
edge/: package.json  tsconfig.json
edge/src/: app-proxy.ts  dev-server.ts  egress-policy.ts  (+9 more)
frontend/: index.html  package.json  tsconfig.json  vite-ai-gateway.ts  vite.config.ts  vitest.config.ts
orchestration/: pyproject.toml  run_demo.py
orchestration/authoring/: agent.py
orchestration/common/: mcp_client.py  models.py  modes.py  runner.py  tracing.py
orchestration/guardrails/: input_moderation.py
orchestration/mapping/: golden-set.json  house-style.yaml  intent_primitive_map.json  mapping_agent.py  validate.py
orchestration/mapping/tests/: test_golden_set.py  test_mapping_validation.py
orchestration/planner/: agent.py  production_plan.py
orchestration/service/: __init__.py  app.py
orchestration/tests/: test_generate_once.py  test_guardrail.py  test_handoffs.py  test_modes.py  test_service.py
orchestration/variation/: agent.py  cost_estimate.py  engine.py  matrix.py
renderer/: Dockerfile  package.json  tsconfig.json
scene-mcp/: package.json  vitest.config.ts
scripts/: smoke.sh
tests/: scaffold.smoke.test.ts
(+220 files in other folders)
