[project]
name = "dept-canvas-orchestration"
version = "0.0.0"
description = "OpenAI Agents SDK orchestration for DEPT Canvas"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mapping/tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mapping", "planner", "authoring", "variation", "guardrails", "common"]
