[project]
name = "dept-canvas-orchestration"
version = "0.0.0"
description = "OpenAI Agents SDK orchestration for DEPT Canvas"
requires-python = ">=3.11"
dependencies = [
    "openai-agents>=0.17.6",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests", "mapping/tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.4.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["mapping", "planner", "authoring", "variation", "guardrails", "common", "service"]
